[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gRestorer"
version = "0.1.0"
description = "GPU-accelerated video mosaic removal pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [{name = "GMan"}]
keywords = ["video", "processing", "mosaic", "removal", "gpu", "nvdec", "nvenc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Topic :: Multimedia :: Video",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "PyNvVideoCodec>=2.0.2",
  "ultralytics>=8.3.228",
  "opencv-python>=4.12.0.88",
  "Pillow>=11.3.0",
  "tqdm>=4.65.0",
]

[project.scripts]
gRestorer = "gRestorer.cli.main:main"
mosaic = "gRestorer.cli.mosaic:main"

[tool.setuptools.packages.find]
include = ["gRestorer*"]
